# sedna

./: .travis.yml  AUTHORS  CMakeCompilers.cmake  CMakeDefinitions.cmake  CMakeLibraries.cmake  CMakeLists.txt  COPYRIGHT  ChangeLog.txt  FAQ  FAQ.html  FEATURES  HISTORY  INSTALL  Makefile  Makefile.depend  Makefile.include  Makefile.ordlib  Makefile.platform  Makefile.pseudolib  README  configure.sh  coverage.pl  depend.sed  exclude_files  release.sh  test.txt
doc/: CMakeLists.txt  Makefile  README
doc/AdminGuide/: AdminGuide.tex  Makefile
doc/ClientServerProtocol/: ClientServerProtocol.tex
doc/CodingGuidelines/: CodingGuidelines.tex
doc/ProgGuide/: Makefile  ProgGuide.tex
doc/ProgGuide/ClientServerProtocol/: ClientServerProtocol.tex  Makefile
doc/QuickStart/: Makefile  QuickStart.tex
doc/man/: se_cdb.8  se_gov.8  se_rc.8  se_sm.8  se_smsd.8  se_stop.8  se_term.1  se_trn.8
doc/tools/: sedna.cfg
driver/: CMakeLists.txt  Makefile
driver/c/: CMakeLists.txt  Makefile  libsedna.c  libsedna.h  sednamt.def  sp_defs.h
driver/java/: CMakeLists.txt  DatabaseManager.java  Debug.java.m4  DriverException.java  Makefile  NetOps.java  ResultType.java  SednaConnection.java  SednaConnectionImpl.java  SednaSerializedResult.java  SednaSerializedResultImpl.java  SednaStatement.java  SednaStatementImpl.java
driver/scheme/: collect-sedna-chicken.scm  collect-sedna-gambit.scm  collect-sedna-plt.scm
driver/scheme/libs/: srfi-12.scm
driver/scheme/sedna-api/: sedna-api.scm  sedna-low.scm
export/: CMakeLists.txt  Makefile  se_exp.c  se_exp.h  se_exp_cl.h  se_exp_common.c  se_exp_common.h  se_exp_export.c  se_exp_export.h  se_exp_import.c  se_exp_import.h  se_exp_queries.h  sprompt.c  sprompt.h
hbp/: CMakeLists.txt  Makefile  hb_aux.cpp  hb_aux.h  hb_files.cpp  hb_files.h  hb_main.cpp  hb_main.h  hot_backup.cpp
kernel/: CMakeLists.txt  Makefile
kernel/aux/: CMakeLists.txt  bit_set.h  commutil.h  counted_ptr.h  internstr.h  utils.cpp  utils.h
kernel/aux/argtable/: CMakeLists.txt  argtable.c  argtable.h
kernel/aux/argtable2/: CMakeLists.txt
kernel/aux/options/: CMakeLists.txt  xml_options.cpp  xml_options.h
kernel/aux/stacktrace/: stacktrace.h
kernel/aux/structures/: bit_set.cpp  se_hash.h
kernel/auxiliary/: CMakeLists.txt  CMakeLists.txt~  bit_set.h  commutil.h  counted_ptr.h  cppcast.h  offs_list.h  processwarden.h  shmwarden.h  utils.h  warden.h
kernel/auxiliary/argtable2/: CMakeLists.txt  CMakeLists.txt~  arg_date.c
kernel/auxiliary/options/: xml_options.cpp  xml_options.cpp~
kernel/auxiliary/stacktrace/: CMakeLists.txt  stacktrfmt.c
kernel/common/: CMakeLists.txt  FastXptrHash.cpp  IntHash.h  IntList.h  Makefile  SSMMsg.cpp  SSMMsg.h  XptrHash.h  argtable.c  argtable.h  base.cpp  base.h  bit_set.cpp  bit_set.h  commutil.h  config.h  counted_ptr.h  d_printf.c  d_printf.h  error.codes  exceptions.cpp  exceptions.h  gen_error_codes.scm  gmm.cpp  gmm.h  internstr.h  ipc_ops.cpp  ipc_ops.h  lfsGlobals.h  lm_base.h  lockmantypes.h  offs_list.h  persistent_db_data.h  pping.cpp  pping.h  rcv_test.cpp  rcv_test.h  se_hash.h  sedna.c  sedna.h  (+16 more)
kernel/common/cmdlines/: CMakeLists.txt  cmdlines.cpp
kernel/common/errdbg/: CMakeLists.txt  Makefile  assert.c  d_printf.c  d_printf.h  error.codes  errors.c  errors.h  event_log.c  event_log.h  exceptions.cpp  exceptions.h  gen_error_codes.c  gen_error_codes.scm
kernel/common/globalobjects/: CMakeLists.txt  globalnames.cpp  globalnames.h  sednaregistry.cpp  sednaregistry.h  ugc.cpp  ugc.h
kernel/common/llcommon/: CMakeLists.txt  lfsGlobals.h  lfsStorage.cpp  lfsStorage.h  llMain.cpp  llMain.h
kernel/common/mmgr/: CMakeLists.txt  Makefile  aset.c  mcxt.c  memnodes.h  memutils.h  se_alloc.h  track.c
kernel/common/ph/: COPYING  Makefile  (+7 more)
kernel/gov/: CMakeLists.txt  Makefile  clients.cpp  clients.h  config_utils.cpp  config_utils.h  cpool.cpp  cpool.h  gov.cpp  gov_functions.cpp  gov_functions.h  gov_globals.cpp  gov_globals.h  gov_table.cpp  gov_table.h  hb_files.cpp  hb_files.h  hb_funcs.cpp  hb_funcs.h  listener.cpp  listener.h  process_manager.cpp  process_manager.h  process_structures.h  rc.cpp  rc.h  stop_server.cpp  worker_client.h
kernel/sm/: CMakeLists.txt  Makefile  cdb.cpp  cdb_globals.cpp  cdb_globals.h  cdb_utils.cpp  cdb_utils.h  db_utils.cpp  db_utils.h  ddb.cpp  hb_utils.cpp  hb_utils.h  lockwarden.h  sm.cpp  sm_functions.cpp  sm_functions.h  sm_globals.cpp  sm_globals.h  smmsgserver.cpp  smmsgserver.h  smsd.cpp  smtypes.h  trmgr.cpp  trmgr.h
kernel/tr/: CMakeLists.txt  Makefile  cl_client.cpp  cl_client.h  client_core.h  rcv_db.cpp  socket_client.cpp  socket_client.h  tr.cpp  tr_base.h  tr_common_funcs.cpp  tr_common_funcs.h  tr_functions.cpp  tr_functions.h  tr_globals.cpp  tr_globals.h  tr_rcv.cpp  tr_utils.h
kernel/u/: CMakeLists.txt  u.c  u.h  uatomic.h  udl.h  uevent.c  uevent.h  ugnames.c  ugnames.cpp  ugnames.h  uhdd.c  uhdd.h  ummap.c  ummap.h  umutex.c  umutex.h  uni.h.in  uprocess.c  uprocess.h  usafesync.h  usecurity.c  usecurity.h  usem.c  usem.h  ushm.c  ushm.h  usocket.c  usocket.h  usocket_int.h  usystem.c  usystem.h  uthread.c  uthread.h  utime.c  utime.h  uutils.c  uutils.h
libs/: 01-libedit-dups.patch  02-libedit-bsd.patch  02-libedit-space.patch  CMakeLists.txt  Makefile  Makefile.antlr  Makefile.dlg  Makefile.sor  Makefile.sor-lib  chicken-make-linux.patch  chicken-make-msvc.patch  chicken.mak  chicken_panic_hook.diff  detoured.lib  detours.lib  expat_static.mak  ntdll.lib
libs/libancillary-0.9.1/: CMakeLists.txt  ancillary.h
libs/pcre/: CMakeLists.txt  internal.h  maketables.cpp  pcre.cpp  pcre_matcher.h  pcre_matcher_base.h  pcre_pattern.h  study.cpp
libs/sym_engine/: StdAfx.cpp  StdAfx.h  sym_engine.cpp  sym_engine.h
term/: CMakeLists.txt  Makefile  complet.cpp  complet.h  mainloop.cpp  mainloop.h  sprompt.cpp  sprompt.h  startup.cpp  term_funcs.cpp  term_funcs.h  term_globals.cpp  term_globals.h  term_ile.cpp  term_ile.h
utest/: CMakeLists.txt  Options.cpp  cdb_test.cpp  event_log_test.cpp  global_names_test.cpp  protocol_test.cpp  xml_options_test.cpp
(+1573 files in other folders)
